# ppx_deriving_variant_string

./: .gitignore  CHANGES.md  Makefile  README.md  dune-project  ppx_deriving_variant_string.opam
.github/workflows/: build-test.yml
src/: dune  fromString.ml  lib.ml  toString.ml
test/: dune  test_fromString.ml  test_of_string.ml  test_toString.ml  test_to_string.ml
