opam-version: "2.0"
synopsis: "OCaml PPX deriver that generates converters between variants and strings"
description: "OCaml PPX deriver that generates converters between regular or polymorphic variants and strings. Supports both OCaml and Reason casing."
maintainer: [
  "Javier Chávarri <javier.chavarri@ahrefs.com>"
]
authors: [
  "Javier Chávarri <javier.chavarri@ahrefs.com>"
]
tags: ["syntax" "org:ahrefs"]
license: "MIT"
homepage: "https://github.com/ahrefs/ppx_deriving_variant_string"
bug-reports: "https://github.com/ahrefs/ppx_deriving_variant_string/issues"
dev-repo: "git+https://github.com/ahrefs/ppx_deriving_variant_string.git"
depends: [
  "ocaml"
  "dune" {>= "3.8"}
  "ppxlib" {>= "0.23.0"}
  "ounit" {with-test}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
  ]
]
