
(test
 (name test_toString)
 (flags
  (:standard -w -27-32-37-60))
 (modules test_toString)
 (libraries ounit2)
 (preprocess
  (pps ppx_deriving_variant_string)))

(test
 (name test_fromString)
 (flags
  (:standard -w -27-32-37-60))
 (modules test_fromString)
 (libraries ounit2)
 (preprocess
  (pps ppx_deriving_variant_string)))

(test
 (name test_to_string)
 (flags
  (:standard -w -27-32-37-60))
 (modules test_to_string)
 (libraries ounit2)
 (preprocess
  (pps ppx_deriving_variant_string)))

(test
 (name test_of_string)
 (flags
  (:standard -w -27-32-37-60))
 (modules test_of_string)
 (libraries ounit2)
 (preprocess
  (pps ppx_deriving_variant_string)))
